# circuit

./: .rust-toolchain.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mise.toml
.github/workflows/: ci.yml  deploy-docs.yml  issue-clarification.yml  issue-maintenance.yml
circuit-core/: Cargo.toml
circuit-core/benches/: engine_benchmarks.rs
circuit-core/src/: block.rs  blocks.rs  engine.rs  error.rs  graph.rs  lib.rs  value.rs
circuit-core/src/blocks/: control.rs  core.rs  logic.rs  math.rs  mod.rs  string.rs
circuit-core/tests/: e2e_flow_tests.rs
circuit-ffi/: Cargo.toml
circuit-ffi/src/: lib.rs
circuit-lang/: Cargo.toml
circuit-lang/src/: ast.rs  converter.rs  grammar.pest  lib.rs  parser.rs
circuit-lang/tests/: edge_cases_tests.rs  error_tests.rs  integration_tests.rs  parser_tests.rs  precedence_tests.rs
circuit-wasm/: Cargo.toml  package.json
circuit-wasm/src/: lib.rs
circuit-wasm/tests/: wasm_tests.rs
docs/: .gitignore  API.md  BUILD.md  DEPLOYMENT.md  KOTLIN.md  LANGUAGE.md  REACT.md  README.md  SWIFT.md  book.toml  build.sh  generate_placeholders.sh
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: building.md  cross-compilation.md  ffi.md  performance.md  testing.md
docs/src/api/: core.md  ffi.md  lang.md  rustdoc.md  wasm.md
docs/src/contributing/: dev-setup.md  how-to.md  style.md
docs/src/examples/: calculator.md  data-pipeline.md  string-processing.md
docs/src/getting-started/: architecture.md  first-flow.md  installation.md  quick-start.md
docs/src/guide/: blocks.md  builtin-blocks.md  custom-blocks.md  engine.md  errors.md  flows.md  language.md  values.md
docs/src/guide/custom-blocks/: block-files.md  rust-blocks.md
docs/src/guide/language/: block-syntax.md  flow-syntax.md  types.md
docs/theme/: custom.css  custom.js
examples/: README.md  calculator.rs
examples/blocks/: logic.compare.block  math.power.block  math.square.block  string.format.block
examples/flows/: advanced_math.flow  calculator.flow  conditional.flow  data_pipeline.flow  string_processing.flow  string_transform.flow
