[workspace]
members = [
    "circuit-core",
    "circuit-wasm",
    "circuit-ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Circuit Contributors"]
license = "MIT"
repository = "https://github.com/blankly-app/circuit"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
