[package]
name = "circuit-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
circuit-lang = { path = "../circuit-lang" }
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "calculator"
path = "../examples/calculator.rs"

[[bench]]
name = "engine_benchmarks"
harness = false
